Showcases paragraph on small screen fixed overflow.

--- a/assets/scss/_responsive-md.scss
+++ b/assets/scss/_responsive-md.scss
@@ -154,10 +154,10 @@
 	// 	margin: 0 !important;
 	// }
 
-	.showcases-header img {
-		height: 650px !important;
-		object-fit: cover !important;
-	}
+	// .showcases-header img {
+	// 	height: 650px !important;
+	// 	object-fit: cover !important;
+	// }
 
 	.showcases-content p {
 		width: 450px;
