--- a/assets/scss/_showcases.scss
+++ b/assets/scss/_showcases.scss
@@ -33,7 +33,7 @@
 }
 
 .showcases-header img {
-  height: 550px;
+  height: 800px;
   object-fit: cover !important;
   width: 100%;
 }
